2002-01-31  Andrew Main (Zefram)  <zefram@zsh.org>

	* 16527: Src/Zle/zle_refresh.c: Don't lose the rprompt when
	clearing an otherwise-blank line.

2002-01-30  Sven Wischnowsky  <wischnow@zsh.org>

	* 16515: Completion/Zsh/Command/_cd: fixlet to avoid an empty
	string in an array; cause completion after cd without any
	matches to not report that there were no matches

2002-01-29  Clint Adams  <clint@zsh.org>

	* 16514: Completion/Unix/Command/_init_d: do not attempt
	to read file if it doesn't exist, match pipe-separated lists
	and characters following the parenthesis, and don't wantonly
	remove hyphens from completions.

2002-01-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 16507: Completion/Zsh/Type/_command_names: slight improvement
	for 16500 to allow completion after ./<TAB> in all cases

2002-01-27  Clint Adams  <clint@zsh.org>

	* 16503: Src/builtin.c: warn on fclose or fflush
	errors in bin_print.

	* 16500: Completion/Zsh/Type/_command_names:
	don't complete executable files in the current directory
	if "." is not in path.

2002-01-23  Bart Schaefer  <schaefer@zsh.org>

	* 16435: Src/builtin.c: Fix core dump in `hash'.

	* 16419: Doc/Zsh/compsys.yo: Document some _arguments options
	in the syntax summary line.

2002-01-23  Peter Stephenson  <pws@csr.com>

	* 16489: Test/C01arith.ztst: default output for whole numbers
	as floats now has `.' at the end, c.f. 16423.

2002-01-22  Peter Stephenson  <pws@csr.com>

	* 16487: Src/glob.c: bug in 16486 when a qualifier in a set
	consisted only of flags which were handled globally.

	* 16486: Doc/Zsh/expn.yo, Src/glob.c, Src/pattern.c:  support
	(#q...) EXTENDED_GLOB syntax for qualifiers.  May be chained,
	ignored by pattern matching code.

2002-01-22  Sven Wischnowsky  <wischnow@zsh.org>

	* 16483: Completion/Base/Completer/_complete,
	Completion/Base/Core/_description,
	Completion/Base/Core/_main_complete,
	Completion/Base/Core/_message,
	Completion/Base/Utility/_alternative,
	Completion/Base/Utility/_arguments,